--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node dist",
+    "start": "node ./dist/auth.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
